# prometheus_metrics_selector

./: Dockerfile  README.md  app.py  build_run.sh  git.sh  metrics_selector.ini  requirements.txt  setup.cfg  utils.py
manifests/: dc-ocp-metrics-selector.yaml  secret-ocp-metrics-selector.yaml  svc-ocp-metrics-selector.yaml
src/: app.py  utils.py
src/resources/: app.yml  metrics_selector.ini
src/test/: testcase.py
src/test/resources/: app-test.yml  example-payload.txt
