[metadata]
name = metrics_selector
version = 1.0.0a1
long_description = file: README.md
long_description_content_type = text/x-markdown
au

[options]
install_requires =
    requests
    requests
    envyaml
    flask
    setuptools
    importlib-metadata; python_version >= "3.9"
packages = find:
package_dir =
    = src
include_package_data = True

[options.package_data]
* = *.txt, *.rst, *.md

[options.packages.find]
where = ["src"]

[options.exclude_package_data]
mypkg =
    .gitattributes